<resources>
    <string name="app_name">Aquaman</string>
    <string name="logo1">logo1</string>
    <string name="logo2">logo2</string>
    <string name="Aquaman">_ Aquaman _</string>
    <string name="Dashboard">Dashboard</string>
    <string name="profilePic">profilePic</string>
    <string name="XYZ">XYZ</string>
    <string name="tagline">At your doorsteps</string>
    <string name="login">Login</string>
    <string name="helloThere">Hello there,</string>
    <string name="logo">logo</string>
    <string name="profileIcon">profileIcon</string>
    <string name="Profile">Profile</string>
    <string name="orderIcon">orderIcon</string>
    <string name="Order">Order</string>
    <string name="historyIcon">historyIcon</string>
    <string name="History">History</string>
    <string name="faqIcon">faqIcon</string>
    <string name="FAQ">FAQ</string>
    <string name="contactIcon">contactIcon</string>
    <string name="Contact">Contact</string>
    <string name="logoutIcon">logoutIcon</string>
    <string name="LogOut">LogOut</string>
    <string name="signUp">Sign Up</string>
    <string name="fullName">Full Name</string>
    <string name="homeAddress">Home Address</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="alreadyHaveAnAccount">Already have an account?</string>
    <string name="logIn">Log In</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="doNotHaveAnAccount">Do not have an account?</string>
    <string name="notRegisteredYet">Not registered yet?</string>
    <string name="showPassword">Show Password</string>
    <string name="userProfile">User Profile</string>
    <string name="Que1">Q. Is there any cancellation charge if order cancelled?</string>
    <string name="Ans1">No, there are not any cancellation charges.</string>
    <string name="Que2">Q. If the customer is unavailable on the delivery time?</string>
    <string name="Ans2">The order will be delivered on the very next day. In case of long duration, we suggest to cancel the order.</string>
    <string name="Que3">Q. Is cash on delivery available?</string>
    <string name="Ans3">Yes, COD is acceptable.</string>
    <string name="Que4">Q. Should I pay tips to delivery boys?</string>
    <string name="Ans4">No, we do not recommend paying tips to our delivery boys.</string>
    <string name="Que5">Q. Can we place large orders for functions?</string>
    <string name="Ans5">Yes, but the customer have to place order for it few days before the scheduled date.</string>
    <string name="Que6">Q. What is the expected delivery time?</string>
    <string name="Ans6">The order will be delivered within 6 to 7 hours</string>
    <string name="order_summary">Order Summary</string>
    <string name="placeOrder">Place Order</string>
    <string name="select_date">Select delivery date</string>
    <string name="place_order">Place Order</string>
    <string name="AboutUs">About Us</string>
    <string name="_0">0</string>
    <string name="enter_delivery_address">Enter Delivery Address</string>
</resources>