<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".FAQpage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Que1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:text="@string/Que1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/Ans1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ans1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/Que2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/Que2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/Ans2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ans2"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/Que3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/Que3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/Ans3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ans3"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/Que4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/Que4"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/Ans4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ans4"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/Que5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/Que5"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/Ans5"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/Ans5"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>