<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".Dashboard">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="20dp"
            android:background="@drawable/dashboard_image">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="9dp"
                android:layout_marginRight="9dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/dolphin_logo" />

            <TextView
                android:id="@+id/dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee"
                android:text="@string/Dashboard"
                android:textColor="#FBF8F8"
                android:textSize="25sp"
                android:layout_toEndOf="@id/logo"
                android:layout_centerVertical="true"
                android:includeFontPadding="false"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/logo"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/helloThere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dashboard"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@id/logo"
                android:layout_toRightOf="@id/logo"
                android:includeFontPadding="false"
                android:text="@string/helloThere"
                android:textColor="#FBF8F8"
                android:textSize="20sp" />

        </RelativeLayout>

        <GridLayout
            android:columnCount="2"
            android:rowCount="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="-60dp"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/profileCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:clickable="true"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="60dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/profileIcon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/profileIcon"
                        android:src="@drawable/profile" />

                    <TextView
                        android:id="@+id/profileText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:contentDescription="@string/Profile"
                        android:text="@string/Profile"
                        android:textColor="#0353F4"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/orderCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:clickable="true"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="60dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/orderIcon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/orderIcon"
                        android:src="@drawable/order1" />

                    <TextView
                        android:id="@+id/orderText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:contentDescription="@string/Order"
                        android:text="@string/Order"
                        android:textColor="#0353F4"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/historyCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:clickable="true"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="60dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/historyIcon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/historyIcon"
                        android:src="@drawable/history" />

                    <TextView
                        android:id="@+id/historyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:contentDescription="@string/History"
                        android:text="@string/History"
                        android:textColor="#0353F4"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:id="@+id/faqCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:clickable="true"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="60dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/faqIcon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/faqIcon"
                        android:src="@drawable/faq" />

                    <TextView
                        android:id="@+id/faqText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:contentDescription="@string/FAQ"
                        android:text="@string/FAQ"
                        android:textColor="#0353F4"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/aboutUsCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:clickable="true"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="60dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/contactIcon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/profileIcon"
                        android:src="@drawable/profile1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:contentDescription="@string/AboutUs"
                        android:text="@string/AboutUs"
                        android:textColor="#0353F4"
                        android:textSize="20sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:id="@+id/logOutCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:clickable="true"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="60dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/logoutIcon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/logoutIcon"
                        android:src="@drawable/logout" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:contentDescription="@string/LogOut"
                        android:text="@string/LogOut"
                        android:textColor="#0353F4"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/dashboard_image"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/water_drop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="Don't let life slip down the drain."
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>